crates/sdk-core/tests/workflows_trybuild/sync_run_fail.stderr
error: #[run] methods must be async
  --> tests/workflows_trybuild/sync_run_fail.rs:10:9
   |
10 |     pub fn run(&mut self, _ctx: &mut WfContext) -> WorkflowResult<()> {
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `WfContext`, `WfExitValue`, and `WorkflowResult`
 --> tests/workflows_trybuild/sync_run_fail.rs:2:22
  |
2 | use temporalio_sdk::{WfContext, WfExitValue, WorkflowResult};
  |                      ^^^^^^^^^  ^^^^^^^^^^^  ^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
